# ComplianceCheckRAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.drift  Makefile  README.md  TEST_PROMPTS.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  dependency-reviewer.md  drift-analyst.md  mobile-tester.md  rag-evaluator.md  security-scanner.md
.claude/commands/: drift-run.md  ingest.md  scaffold.md  ship-check.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
app/: config.py  conversation.py  llm.py  main.py  metrics.py  pii.py
app/rag/: chunking.py  generate.py  ingest.py  retrieve.py  rewrite.py
app/telemetry/: feedback.py  logger.py  schema.py
data/: README.md
docs/: architecture.md  debugging.md  dependencies.md  deployment.md  ingestion.md  monitoring.md  pre-commit-hook.md  testing.md  workflow-summary.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: ChatWindow.tsx  CitationCard.tsx  DocumentBadge.tsx  (+4 more)
k8s/: cronjob-drift.yaml  manifests.yaml
monitoring/: prometheus.yml
monitoring/drift_job/: feedback_analysis.py  output_drift.py  quality_eval.py  requirements.drift.txt  retrieval_drift.py  run_drift.py  snapshot.py
scripts/: pre-commit
tests/: conftest.py  test_conversation.py  test_pii.py  test_rag_eval.py  test_security.py  test_telemetry.py
volumes/: README.md
(+7 files in other folders)
