[project]
name = "compliance-check-rag"
version = "0.1.0"
description = "Self-hosted multi-turn RAG for compliance document Q&A"
requires-python = ">=3.11,<3.12"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
